<resources>
    <string name="app_name">Movie Finder</string>
    <string name="TheaterActivity">Movie Theater</string>
    <string name="heading">Movie Finder</string>
    <string name="movieButton">Get Movie</string>
    <string name="locationButton">Find Theaters</string>
    <string-array name="location">
        <item>Boulder</item>
        <item>Denver</item>
        <item>Aurora</item>
    </string-array>
    <string name="title_activity_lab9">lab9Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="feedbackHint">Feedback</string>
    <string name="narrative">narrative film</string>
    <string name="documentary">documentary</string>
    <string name="topRated">top-rated</string>
    <string name="off">off</string>
    <string name="on">on</string>

</resources>
